# mystore-cpp-client

./: .env  .gitignore  CMakeLists.txt  README.md
include/: mystorecpp.hpp
lib/: mystorecpp.cpp
src/: mystorecpp.cpp
tests/: testclient.cpp
